--- a/mathfest.html
+++ b/mathfest.html
@@ -92,7 +92,11 @@
             <br>
               <small>Professor at Carnegie Mellon University</small>
             </h3>
-            <p><!--description--></p>
+            <p>
+              Wesley is an Associate Professor in mathematics at Carnegie Mellon University.
+              He works in combinatorics and discrete probability, and he has numerous publications on the Abelian Sandpile,
+              CS theory, extremal problems, randomness, graph theory, geometry, and games.
+            </p>
           </div>
           <div class="col-md-6 mx-auto">
             <br>
@@ -102,7 +106,11 @@
               <br>
               <small>Professor at St. Mary's College</small>
             </h3>
-            <p><!--description--></p>
+            <p>
+              Dr. Ellen Veomett is a Professor at Saint Mary's College of California.
+              Her research interests include combinatorics, convex geometry, metric geometry,
+              and the intersection of mathematics with election outcomes.
+            </p>
           </div>
         </div>
       </div>
