--- a/mathfest.html
+++ b/mathfest.html
@@ -15,7 +15,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
-    <link href="css/myStyle.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
     <link href="css/calendar.css" rel="stylesheet">
 
   </head>
@@ -216,7 +216,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Questions?</h2>
-            <p class="lead">Please contact Christine Breiner at cbreiner@fordham.edu for more information.</p>
+            <p class="lead">Please contact Christine Breiner at <a href="mailto:cbreiner@fordham.edu">cbreiner@fordham.edu</a> for more information.</p>
           </div>
         </div>
       </div>
