--- a/mathfest.html
+++ b/mathfest.html
@@ -107,9 +107,12 @@
               <small>Professor at St. Mary's College</small>
             </h3>
             <p>
-              Dr. Ellen Veomett is a Professor at Saint Mary's College of California.
-              Her research interests include combinatorics, convex geometry, metric geometry,
-              and the intersection of mathematics with election outcomes.
+              Ellen Veomett is a Professor of Mathematics at Saint Mary's College of California.
+              Her background is in discrete geometry, and she got involved in studying the mathematics
+              of redistricting in 2017.  Her most well-known work in this area is her analysis of the
+              Efficiency Gap, in which she showed how voter turnout affects the metric.  She has also done
+              an analysis of the Declination, and is working on various projects related to redistricting and
+              to detecting gerrymandering.
             </p>
           </div>
         </div>
@@ -197,7 +200,7 @@
           <div class="col-lg-8 mx-auto">
             <h2>Getting There</h2>
 
-           	<p>The main entrance to Fordham University is located at the southeast corner of Columbus Avenue at 60th
+           	<p>The main entrance to Fordham University is located at the northwest corner of Columbus Avenue at 60th
 			Street (113 West 60th Street, New York, NY 10023). The A, B, C, D and 1 subway trains all
 			stop at 59th Street/Columbus Circle. The campus is located one block west.</p>
 
