--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description"
+    content="MathFest 2020 is an annual event hosted by Fordham University - find more information and registration here.">
 
   <title>MathFest 2020</title>
 
@@ -60,8 +60,8 @@
 
   <!-- MathFest main info header -->
   <header>
-    <div class="container text-center">
-      <img src="img/US-mosaic.svg" alt="US red and blue mosaic artwork" id="mosaic">
+    <div class="container text-center" id="masthead">
+      <img src="img/US-mosaic.svg" alt="US red and blue mosaic artwork">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto text-overlay">
           <div class="site-heading" id="text-heading">
@@ -139,7 +139,7 @@
     </div>
   </section>
 
-  <img style="float:right" src="img/red-line.svg" alt="Red line decoration" id="red-line"><br>
+  <img src="img/red-line.svg" alt="Red line decoration" id="red-line"><br>
 
   <!-- About MathFest and Register form sections -->
   <section class="py-5">
@@ -193,25 +193,39 @@
             </div>
             <div class="form-check">
               <input class="form-check-input" name="confirmation" type="checkbox">
-              <label class="form-check-label" for="confirmation">I plan to attend Fordham MathFest 2020 on March 28</label>
+              <label class="form-check-label" for="confirmation">I plan to attend Fordham MathFest 2020 on March
+                28</label>
             </div>
             <br>
-            <button class="btn btn-success" name="action" type="submit" value="submit" id="submit-form">Register</button>
+            <button class="btn btn-success" name="action" type="submit" value="submit"
+              id="submit-form">Register</button>
           </form>
         </div>
       </div>
     </div>
   </section>
 
-  <img style="float:left" src="img/blue-line.svg" alt="Blue line decoration" id="blue-line"><br>
+  <img src="img/blue-line.svg" alt="Blue line decoration" id="blue-line"><br>
 
   <!-- Schedule section-->
   <section class="py-5 bg-light" id="schedule">
-    <div class="container text-center">
+    <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Schedule</h2>
-          <p>TBD</p>
+          <h2 class="text-center">Schedule</h2>
+          <div id="schedule-times">
+            <ul><b>9:30</b> - Registration, coffee, light breakfast in the Atrium</ul>
+            <hr>
+            <ul><b>10:30</b> - Speaker 1</ul>
+            <hr>
+            <ul><b>11:30</b> - Lunch in the Atrium</ul>
+            <hr>
+            <ul><b>1:00</b> - Speaker 2</ul>
+            <hr>
+            <ul><b>2:15</b> - Panel discussion</ul>
+            <hr>
+            <ul><b>3:45</b> - Closing remarks</ul>
+          </div>
         </div>
       </div>
     </div>
@@ -273,6 +287,8 @@
   <script src="js/scrolling-nav.js"></script>
   <script src="js/timer.js"></script>
   <script src="js/calendar.js"></script>
+
+  <!-- AJAX for exporting HTML form data to Google Sheets -->
   <script src="js/googlescript-ajax.js"></script>
 
 </body>
