--- a/index.html
+++ b/index.html
@@ -61,15 +61,14 @@
   <!-- MathFest main info header -->
   <header>
     <div class="container text-center" id="masthead">
-      <img src="img/US-mosaic.svg" alt="US red and blue mosaic artwork">
+      <img src="img/US-mosaic.svg" alt="US red and blue mosaic artwork" class="img-responsive">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto text-overlay">
-          <div class="site-heading" id="text-heading">
+          <div class="site-heading">
             <h3><b>Fordham College Lincoln Center</b></h3>
             <h1 id="title"><b>MathFest 2020</b></h1>
-            <h1 id="subtitle"><b>Gerrymandering</b></h1>
-            <h2><b>Saturday, March 28th</b></h2>
-            <h4 id="timer"></h4>
+            <h2 id="subtitle"><b>Gerrymandering</b></h2>
+            <h3><b>Saturday, March 28th</b></h3>
           </div>
         </div>
       </div>
@@ -146,12 +145,13 @@
     <div class="container">
       <div class="row flex-column flex-md-row" id="about">
         <div class="col-md-6 mx-auto px-3">
-          <h2 style="text-align:center">About MathFest</h2>
+          <h2 style="text-center">About MathFest</h2>
           <br>
           <p class="calendar">28<em>March</em></p>
+          <p><!-- Insert About text here --></p>
         </div>
         <div class="col-md-6 mx-auto px-3" id="register">
-          <h2 style="text-align:center">Register</h2>
+          <h2 style="text-center">Register</h2>
           <form id="register-form">
             <div class="form-group">
               <label for="nameFirst">First Name</label>
@@ -214,17 +214,17 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="text-center">Schedule</h2>
           <div id="schedule-times">
-            <ul><b>9:30</b> - Registration, coffee, light breakfast in the Atrium</ul>
+            <ul><b>9:30</b> – Registration, coffee, light breakfast in the Atrium</ul>
             <hr>
-            <ul><b>10:30</b> - Speaker 1</ul>
+            <ul><b>10:30</b> – Speaker 1</ul>
             <hr>
-            <ul><b>11:30</b> - Lunch in the Atrium</ul>
+            <ul><b>11:30</b> – Lunch in the Atrium</ul>
             <hr>
-            <ul><b>1:00</b> - Speaker 2</ul>
+            <ul><b>1:00</b> – Speaker 2</ul>
             <hr>
-            <ul><b>2:15</b> - Panel discussion</ul>
+            <ul><b>2:15</b> – Panel discussion</ul>
             <hr>
-            <ul><b>3:45</b> - Closing remarks</ul>
+            <ul><b>3:45</b> – Closing remarks</ul>
           </div>
         </div>
       </div>
