--- a/index.html
+++ b/index.html
@@ -152,7 +152,18 @@
           <h2 class="text-center">About MathFest</h2>
           <br>
           <p class="calendar">28<em>March</em></p>
-          <p><!-- Insert About text here --></p>
+          <p>How do we make sure federal, state, and local funds are distributed in a manner that meets the greatest
+            need? How can we be certain every vote counts? These and other questions will be of particular interest this
+            year, as the decennial US Census is completed by July of this year.</p>
+          <p>Once the numbers are in, legislators and social scientists will be pouring over them. But so will
+            mathematicians. Questions of equity and fairness are being addressed using sophisticated tools from
+            theoretical and applied mathematics.</p>
+          <p>This year at MathFest, we consider this overlap between mathematics and social science. Listen to two talks
+            given by math professors who study these problems. Participate in a panel that includes the former director
+            of the redistricting staff of the NY State Democrats, a Senior Fellow at the NY Census & Redistricting
+            Institute, the Co-founder of Social Explorer, and the Director of the NYC labor council. Network with these
+            professionals and with graduate students in the social sciences who use the data to advocate for social
+            change.</p>
         </div>
         <div class="col-md-6 mx-auto px-3" id="register">
           <h2 class="text-center">Register</h2>
@@ -220,15 +231,23 @@
           <div id="schedule-times">
             <ul><b>9:30</b> – Registration, coffee, light breakfast in the Atrium</ul>
             <hr>
-            <ul><b>10:30</b> – Speaker 1</ul>
+            <ul><b>10:30</b> – Talk 1: Wes Pegden</ul>
             <hr>
             <ul><b>11:30</b> – Lunch in the Atrium</ul>
             <hr>
-            <ul><b>1:00</b> – Speaker 2</ul>
+            <ul><b>1:00</b> – Talk 2: Ellen Veomett</ul>
             <hr>
-            <ul><b>2:15</b> – Panel discussion</ul>
+            <ul><b>2:15</b> – Panel discussion:</ul>
+            <!-- Panel -->
+            Andrew Beveridge — <i>Professor of Sociology at Queens College and the CUNY Graduate Center, Co-founder of Social Explorer</i>
+            <br>
+            Todd Breitbart — <i>Former director of the redistricting staff of the New York Senate Democrats</i>
+            <br>
+            Lucia Gomez — <i>Political Director for the largest central labor council in the country, the AFL-CIO</i>
+            <br>
+            Jeffrey M. Wice — <i>Senior Fellow, NY Census & Redistricting Institute, New York Law School</i>
             <hr>
-            <ul><b>3:45</b> – Closing remarks</ul>
+            <ul><b>3:45</b> — Closing remarks</ul>
           </div>
         </div>
       </div>
@@ -244,13 +263,21 @@
           <p>The main entrance to Fordham University is located at the northwest corner of Columbus Avenue at 60th
             Street (113 West 60th Street, New York, NY 10023). The A, B, C, D and 1 subway trains all
             stop at 59th Street/Columbus Circle. The campus is located one block west.</p>
-          <p>Talks will be located at <b>Fordham Law School, Room 3-04</b>:
-            <ul>
-              <p>From Columbus Circle, head to Fordham University. Walk two blocks up from 60th St and make a left.
-                Enter the law school building at 150 West 62nd Street.
-                Take the elevator up to the 3rd floor - on the glass side of the building, walk left and down to room
-                3-04 (note that there are two entrances to each room).</p>
-            </ul>
+          <p>Registration and breakfast/lunch are located in the <b>Atrium</b>:</p>
+          <ul>
+            Enter Fordham Lincoln Center at the corner of 60th and Columbus. Proceed straight
+            ahead until you see the escalators. Take the escalator one floor up to the Plaza level. Turn left and walk
+            into the Ram Cafe. The Atrium will be past the cash registers and to the right.
+            <br><br>
+            To get to the Atrium from LAW 3-04: Directions will be provided on the day of the event.
+          </ul>
+          <p>Talks are located at <b>Fordham Law School, Room 3-04</b>:</p>
+          <ul>
+            <p>From Columbus Circle, head to Fordham University. Walk two blocks up from 60th St and make a left.
+              Enter the law school building at 150 West 62nd Street.
+              Take the elevator up to the 3rd floor - on the glass side of the building, walk left and down to room
+              3-04 (note that there are two entrances to each room).</p>
+          </ul>
         </div>
       </div>
     </div>
