--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
       <div class="row flex-column flex-md-row">
         <div class="col-md-6 mx-auto">
           <br>
+          <img class="rounded-circle profile img-fluid d-block mx-auto" src="img/veomett.jpg"
+            alt="Photo of Ellen Veomett">
+          <br>
+          <h3>Ellen Veomett
+            <br>
+            <small>Professor at St. Mary's College</small>
+          </h3>
+          <p>
+            Ellen Veomett is a Professor of Mathematics at Saint Mary's College of California.
+            Her background is in discrete geometry, and she got involved in studying the mathematics
+            of redistricting in 2017. Her most well-known work in this area is her analysis of the
+            Efficiency Gap, in which she showed how voter turnout affects the metric. She has also done
+            an analysis of the Declination, and is working on various projects related to redistricting and
+            to detecting gerrymandering.
+          </p>
+        </div>
+        <div class="col-md-6 mx-auto">
+          <br>
           <img class="rounded-circle profile img-fluid d-block mx-auto" src="img/pegden.jpg"
             alt="Photo of Wesley Pegden">
           <br>
@@ -118,24 +136,6 @@
             Congressional districting of Pennsylvania as a partisan gerrymander,
             and the <i>Common Cause v. Lewis</i> case, which overturned the state House
             and Senate districtings of North Carolina as partisan gerrymanders.
-          </p>
-        </div>
-        <div class="col-md-6 mx-auto">
-          <br>
-          <img class="rounded-circle profile img-fluid d-block mx-auto" src="img/veomett.jpg"
-            alt="Photo of Ellen Veomett">
-          <br>
-          <h3>Ellen Veomett
-            <br>
-            <small>Professor at St. Mary's College</small>
-          </h3>
-          <p>
-            Ellen Veomett is a Professor of Mathematics at Saint Mary's College of California.
-            Her background is in discrete geometry, and she got involved in studying the mathematics
-            of redistricting in 2017. Her most well-known work in this area is her analysis of the
-            Efficiency Gap, in which she showed how voter turnout affects the metric. She has also done
-            an analysis of the Declination, and is working on various projects related to redistricting and
-            to detecting gerrymandering.
           </p>
         </div>
       </div>
@@ -231,15 +231,16 @@
           <div id="schedule-times">
             <ul><b>9:30</b> – Registration, coffee, light breakfast in the Atrium</ul>
             <hr>
-            <ul><b>10:30</b> – Talk 1: Wes Pegden</ul>
+            <ul><b>10:30</b> – Talk 1: Ellen Veomett</ul>
             <hr>
             <ul><b>11:30</b> – Lunch in the Atrium</ul>
             <hr>
-            <ul><b>1:00</b> – Talk 2: Ellen Veomett</ul>
+            <ul><b>1:00</b> – Talk 2: Wes Pegden</ul>
             <hr>
             <ul><b>2:15</b> – Panel discussion:</ul>
             <!-- Panel -->
-            Andrew Beveridge — <i>Professor of Sociology at Queens College and the CUNY Graduate Center, Co-founder of Social Explorer</i>
+            Andrew Beveridge — <i>Professor of Sociology at Queens College and the CUNY Graduate Center, Co-founder of
+              Social Explorer</i>
             <br>
             Todd Breitbart — <i>Former director of the redistricting staff of the New York Senate Democrats</i>
             <br>
@@ -302,8 +303,9 @@
     <div class="container text-center">
       <img src="img/nsf-logo.png" alt="NSF logo">
       <p class="m-0 text-center text-white">This event is supported by NSF grant DMS-1750254</p>
-      <p class="m-0 text-center text-white">Partial support was also provided by Fordham College at Rose Hill and
-        Fordham College at Lincoln Center</p>
+      <p class="m-0 text-center text-white">Partial support was also provided by the Office of the Dean of Fordham
+        College at Lincoln Center,<br>Dr. Anne Yust from The New School, and members of the Fordham Mathematics Department
+      </p>
     </div>
   </footer>
 
