Add disable function to submit button
Disables button after clicking once to submit form

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 28</label>
             </div>
             <br>
-            <button class="btn btn-success" type="submit" value="submit" onclick="sendEmail()"
+            <button class="btn btn-success" type="submit" value="submit"
               id="submit-form">Register</button>
           </form>
         </div>
