--- a/mathfest.html
+++ b/mathfest.html
@@ -8,7 +8,7 @@
   <meta name="description"
     content="MathFest 2020 is an annual event hosted by Fordham University - find more information and registration here.">
 
-  <title>MathFest 2020</title>
+  <title>MathFest 2020-CANCELED</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +45,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#register">Register</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#schedule">Schedule</a>
           </li>
@@ -72,7 +72,7 @@
             <h3><b>Fordham College Lincoln Center</b></h3>
             <h1 id="title"><b>MathFest 2020</b></h1>
             <h2 id="subtitle"><b>Gerrymandering</b></h2>
-            <h3><b>Saturday, March 28th</b></h3>
+            <h3><b>MATHFEST HAS BEEN CANCELED</b></h3>
           </div>
         </div>
       </div>
@@ -165,7 +165,7 @@
             professionals and with graduate students in the social sciences who use the data to advocate for social
             change.</p>
         </div>
-        <div class="col-md-6 mx-auto px-3" id="register">
+        <!-- <div class="col-md-6 mx-auto px-3" id="register">
           <h2 class="text-center">Register</h2>
           <form method="post" id="register-form">
             <div class="form-group">
@@ -212,10 +212,10 @@
                 28</label>
             </div>
             <br>
-            <button class="btn btn-success" type="submit" value="submit"
+            <button class="btn btn-success" type="submit" value="submit" onclick="sendEmail()"
               id="submit-form">Register</button>
           </form>
-        </div>
+        </div> -->
       </div>
     </div>
   </section>
@@ -229,11 +229,11 @@
         <div class="col-lg-8 mx-auto">
           <h2 class="text-center">Schedule</h2>
           <div id="schedule-times">
-            <ul><b>10:00</b> – Registration, coffee, light breakfast in the Atrium</ul>
+            <ul><b>9:30</b> – Registration, coffee, light breakfast in the Atrium</ul>
             <hr>
-            <ul><b>11:00</b> – Talk 1: Ellen Veomett</ul>
+            <ul><b>10:30</b> – Talk 1: Ellen Veomett</ul>
             <hr>
-            <ul><b>12:00</b> – Lunch in the Atrium</ul>
+            <ul><b>11:30</b> – Lunch in the Atrium</ul>
             <hr>
             <ul><b>1:00</b> – Talk 2: Wes Pegden</ul>
             <hr>
